* User: followers/following mechanism (TrivialDev)
* Utils: crossref, support diary [Nxxx] and Project [Pxxx] (TrivialDev)
* Widget HomeLatestDiaryNotes: new widget for Forge home page to display 5 latest public Diary Notes across the forge (TrivialDev)
* Widget_RSS: upgrade SimplePie integration to 1.3.1 version (align source install & debian install) [#913] (TrivialDev)

FusionForge 6.1.1:
* Plugin Scmhook: fix scmhook commitEmail for scmhg broken [#903] (TrivialDev)
* Plugin Scmhook: fix scmhook commitTracker [#911] (Florian Bruneau)
* Plugin Scmsvn: fix <reponame>_scmsvn_paths.txt support [#906] (TrivialDev)
* Plugin Scmgit: fix wrong host for js, css inclusion [#909] (TrivialDev)
* Project Admin: fix FRS notification settings [#910] (TrivialDev)
* Search Engine: fix PHP notice in SearchManager.class.php [#908] (TrivialDev)
* Widget User Page: fix owner test to ensure the user is the owner of the layout.

FusionForge 6.1:
* Accounts: minimum password length is now 8 (Sylvain Beucler)
* Accounts: add minimal constraints to password (upper-case, lower-case, non-alphanumeric check) [#826] (Inria)
* Core System: support object association n-n, bidirectional (Artifact, Document, FRSRelease) (TrivialDev)
* Docman: limit number of returned documents on search query. Use paging system [#794] (TrivialDev)
* Docman: limit search using from & to dates [#798] (TrivialDev)
* Docman: use standard search engine: unify results between 'search in project' & search in the docs tab (TrivialDev)
* Docman: searchengine: DocsAll & Docs unified. (TrivialDev)
* Docman: searchengine: add edit file action on result. (TrivialDev)
* Docman: notify users on document. (TrivialDev)
* Docman: support private directory. (TrivialDev)
* Docman: support document versioning. (TrivialDev)
* Docman: support cross ref. forum, documents, task or artifact. (TrivialDev)
* Docman: add new document review feature. to review version, document and post comment to a document. (TrivialDev)