@@ -7,6 +7,7 @@ FusionForge X.y:
 * Utils: crossref, support diary [Nxxx] and Project [Pxxx] (TrivialDev)
 * Widget HomeLatestDiaryNotes: new widget for Forge home page to display 5 latest public Diary Notes across the forge (TrivialDev)
 * Widget_RSS: upgrade SimplePie integration to 1.3.1 version (align source install & debian install) [#913] (TrivialDev)
+* Widget_HomeHallOfFame: new widget to display to most voted artifact, project, diary across the forge (TrivialDev)
 
 FusionForge 6.1.1:
 * Plugin Scmhook: fix scmhook commitEmail for scmhg broken [#903] (TrivialDev)
